[package]
name = "chewy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
taffy = "0.2.2"
windows-core = "0.58.0"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_WinRT",
]

[build-dependencies]
windows-bindgen = "0.58"
windows-metadata = "0.58"
